# multiview

./: CMakeLists.txt
cmake/modules/: GetGitVersion.cmake
src/: CMakeLists.txt  MainWindow.cpp.cc  MainWindow.h  MainWindow.ui  Pager.cpp  Pager.h  def.h.in  main.cpp
src/ui/: BasePage.cpp.cc  BasePage.h  BasePage.ui  GroupsPage.cpp  GroupsPage.h  GroupsPage.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui  StartPage.cpp.cc  StartPage.h  StartPage.ui  UsersPage.cpp.cc  UsersPage.h  UsersPage.ui  uicommon.h
